test/libsolidity/syntaxTests/storageLayoutSpecifier/hex_string_cast.sol
contract at layout at uint40(bytes5(hex"0011223344")) { }
// ----
// TypeError 1505: (22-53): The base slot expression cannot be evaluated during compilation.
